# performer-nx

./: CHANGELOG.md  LICENSE  Makefile  README.md  Vagrantfile
doc/: CurveTrackLayers.md  NoteTrackLayers.md  ProjectFileformat.md  SettingsFileformat.md  Song.md  UserScaleFileformat.md
resources/c64fontconvert/: README.md  README_BITMAPFONT_TO_GLYPHTEXT.md  README_C64_FONT_DUMP_ASCII.md  README_C64_FONT_TO_BITMAPFONT.md  README_GLYPHTEXT_EDITOR.md  README_GLYPHTEXT_TO_BIN.md  TOOLCHAIN.md  bitmapfont_to_glyphtext  bitmapfont_to_glyphtext.cpp  c64font_dump_ascii  c64font_dump_ascii.cpp  c64font_to_bitmapfont  c64font_to_bitmapfont.cpp  glyphtext_editor  glyphtext_editor.cpp  glyphtext_to_bin  glyphtext_to_bin.cpp
resources/c64fontconvert/font-header/: tiny5x5.h
resources/c64fontconvert/font-source/: 8x8font.txt  ati8x8.txt  commodore.txt  tiny5x5.txt
src/: SystemConfig.h
src/apps/sequencer/: CMakeLists.txt  Colors.h  Config.h  Sequencer.cpp  Texts.h
src/apps/sequencer/asteroids/: Asteroids.cpp
src/apps/sequencer/engine/: Clock.cpp  Clock.h  Engine.cpp  Engine.h  MidiPort.h  NoteTrackEngine.cpp  NoteTrackEngine.h  TrackEngine.h
src/apps/sequencer/engine/generators/: AcidBasslineGenerator.cpp  AcidBasslineGenerator.h  EuclideanGenerator.cpp  Generator.cpp  Generator.h  RandomGenerator.cpp
src/apps/sequencer/model/: AdvancedSettings.cpp  AdvancedSettings.h  Arpeggiator.h  Calibration.h  ClockSetup.h  CurveSequence.h  CurveTrack.h  FileManager.cpp  KnownDivisor.h  MidiCvTrack.cpp  MidiCvTrack.h  MidiOutput.h  NoteSequence.cpp  NoteSequence.h  NoteTrack.h  PlayState.h  Project.cpp  Project.h  Routing.cpp  Routing.h  Scale.cpp  Scale.h  Settings.cpp  Settings.h  TimeSignature.h  Track.cpp  Track.h  Types.cpp  Types.h  UserScale.cpp  UserScale.h
src/apps/sequencer/ui/: PageManager.cpp  PageManager.h  Ui.cpp
src/apps/sequencer/ui/model/: AdvancedSettingsListModel.h  ClockSetupListModel.h  CurveSequenceListModel.h  CurveTrackListModel.h  CvOutputListModel.h  FileSelectListModel.h  GateOutputListModel.h  LinkTrackListModel.h  MidiCvTrackListModel.h  NoteSequenceListModel.h  NoteTrackListModel.h  OutputListModel.h  ProjectListModel.h  RouteListModel.h  TrackModeListModel.h  UserScaleListModel.h  UtilitiesListModel.h
src/apps/sequencer/ui/pages/: BasePage.h  BusyPage.cpp  ClockSetupPage.cpp  ConfirmationPage.cpp  ContextMenuPage.cpp  CurveSequenceEditPage.cpp  CurveSequenceEditPage.h  CurveSequencePage.cpp  FileSelectPage.cpp  GeneratorPage.cpp  GeneratorPage.h  GeneratorSelectPage.cpp  IntroPage.cpp  IntroPage.h  LayoutPage.cpp  ListPage.cpp  MidiOutputPage.cpp  MidiOutputPage.h  MonitorPage.cpp  NoteSequenceEditPage.cpp  NoteSequenceEditPage.h  NoteSequencePage.cpp  OverviewPage.cpp  OverviewPage.h  PatternPage.cpp  PerformerPage.cpp  ProjectPage.cpp  QuickEditPage.cpp  RoutingPage.cpp  SongPage.cpp  StartupPage.cpp  StartupPage.h  SystemPage.cpp  SystemPage.h  TempoPage.cpp  TextInputPage.cpp  TopPage.cpp  TrackPage.cpp  UserScalePage.cpp
src/apps/sequencer/ui/painters/: SequencePainter.cpp  SequencePainter.h  SongPainter.cpp  WindowPainter.cpp  WindowPainter.h
src/platform/sim/libs/rtmidi/: RtMidi.cpp  RtMidi.h
src/platform/sim/sim/: Simulator.cpp  Simulator.h  TargetTrace.cpp
src/platform/sim/sim/frontend/: ClockSource.h  Frontend.cpp  Frontend.h  Frontpanel.h  Window.cpp  Window.h
src/platform/sim/sim/frontend/widgets/: Display.h  Rotary.h
src/platform/stm32/libs/libusbhost/include/: usbh_core.h  usbh_driver_hub.h  usbh_lld_stm32f4.h
src/platform/stm32/libs/libusbhost/src/: usbh_driver_hub.c
src/tests/unit/core/io/: TestVersionedSerialization.cpp
src/tests/unit/sequencer/: CMakeLists.txt  TestAcidBasslineGenerator.cpp  TestArpeggiatorEngine.cpp  TestClockCore.cpp  TestClockExternalTiming.cpp  TestClockSetup.cpp  TestCurveTrackEngine.cpp  TestCvInput.cpp  TestCvOutput.cpp  TestEngine.cpp  TestEngineTransportClock.cpp  TestEuclideanGenerator.cpp  TestGenerator.cpp  TestMidiCvTrackEngine.cpp  TestMidiLearn.cpp  TestMidiOutputEngine.cpp  TestNoteTrackEngineAdvanced.cpp  TestNoteTrackEngineGateOffset.cpp  TestRandomGenerator.cpp  TestRhythm.cpp  TestRoutingEngine.cpp  TestSequenceState.cpp
